--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="button1">Click me!</button> 
+    <script src="script.js"></script>
 </body>
 </html>
