--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button id="button1">Click me!</button> 
+    <a href="https://westhillscollege.com/portal/" id="link1">My favorite website</a>
     <script src="script.js"></script>
 </body>
 </html>
